fix: modify email template util to load template with class path